<resources>
    <string name="certificate_3lm">MIIEbTCCA1WgAwIBAgIJAJ3tD9oyIhmaMA0GCSqGSIb3DQEBBQUAMGwxCzAJBgNVBAYTAlVTMQswCQYDVQQIEwJDQTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEMMAoGA1UEChMDM0xNMRQwEgYDVQQLEwszTE0gUm9vdCBDQTEUMBIGA1UEAxMLM0xNIFJvb3QgQ0EwIBcNMTAxMTIwMDIxOTQwWhgPMjA2MDExMDcwMjE5NDBaMIGMMQswCQYDVQQGEwJVUzELMAkGA1UECBMCQ0ExFjAUBgNVBAcTDU1vdW50YWluIFZpZXcxDDAKBgNVBAoTAzNMTTEkMCIGA1UECxMbM0xNIEFwcGxpY2F0aW9uIENlcnRpZmljYXRlMSQwIgYDVQQDExszTE0gQXBwbGljYXRpb24gQ2VydGlmaWNhdGUwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQCxfvkx3EmdzvIqFtqkBVg1R34uLUq7p58UV6Hh1EfOEnma69cNmfDKgrQKlcQcHRjOl55V6ojJMOUlR5f6ywF3VGl36aZ70XGEgH0eSGcnMwyMzaLbhiR2Hgk9fMNNyGh57B2mG5WpTIKnlr4jVxFJMqHskA7fv4GtPZSNZ+Xho7LZY0gm0q6uQCi29p6/L48gHbyrpjAkLFXVjh/pev6+fNNYlbzdpHBdyAN9KCatsjld8HXTh5uk55PNGmrzkr/G6FbE1iMQaJoqZUTU3mw2B2zLl4lbq0tmdMtAgnHoefL8znOIWH3knIOPrGXLNBAfJslSls7yO7OH8kCKrzuLAgMBAAGjge4wgeswCQYDVR0TBAIwADARBglghkgBhvhCAQEEBAMCBBAwCwYDVR0PBAQDAgbAMB0GA1UdDgQWBBRG4hoEpXFa6jFThwX0Vy6W+i2aJzCBngYDVR0jBIGWMIGTgBTadY1QuOklODIhVWluRXg1NBvEj6FwpG4wbDELMAkGA1UEBhMCVVMxCzAJBgNVBAgTAkNBMRYwFAYDVQQHEw1Nb3VudGFpbiBWaWV3MQwwCgYDVQQKEwMzTE0xFDASBgNVBAsTCzNMTSBSb290IENBMRQwEgYDVQQDEwszTE0gUm9vdCBDQYIJALX3Ed+KfxKgMA0GCSqGSIb3DQEBBQUAA4IBAQASDyCYK1PmVvDScbnD3pPmxNtOCuvmSFNVcxMuPb5PpplFVkJEs4Jdv+3M59tez0K8t3muu746lpiNCbW9MlJG7CjaoUz5tbB5cAj4oHrCzhbaMgRDUQxwluHimFdboq3Y4FVi/zcGSIVvGxuAM48br140EKjqKNzd6+jTN6lglFq9TnP/bvwTpXwQy7cneidLvWFu6eNEOng+FtEb83bDvbqNoFEhA0UDg6IF3BVHQLJkUy3rMJTcudx6aYRk0iE4npHIw8gTBypYdgPFz05nLC3sEBIkdR5Mag4JeTRYg+RNReLYIcnXG7PsU0pZFv1b8XaxUugJmO7EhcU5UQrC</string>
    <string name="debug_certificate_3lm">MIIEqDCCA5CgAwIBAgIJAJNurL4H8gHfMA0GCSqGSIb3DQEBBQUAMIGUMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEQMA4GA1UEChMHQW5kcm9pZDEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDEiMCAGCSqGSIb3DQEJARYTYW5kcm9pZEBhbmRyb2lkLmNvbTAeFw0wODAyMjkwMTMzNDZaFw0zNTA3MTcwMTMzNDZaMIGUMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEQMA4GA1UEChMHQW5kcm9pZDEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDEiMCAGCSqGSIb3DQEJARYTYW5kcm9pZEBhbmRyb2lkLmNvbTCCASAwDQYJKoZIhvcNAQEBBQADggENADCCAQgCggEBANaTGQTexgskse3HYuDZ2CU+Ps1s6x3i/waMqOi8qM1r03hupwqnbOYOuw+ZNVn/2T53qUPn6D1LZLjk/qLT5lbx4meoG7+yMLV4wgRDvkxyGLhG9SEVhvA4oU6Jwr44f46+z4/Kw9oe4zDJ6pPQp8PcSvNQIg1QCAcy4ICXF+5qBTNZ5qaU7Cyz8oSgpGbIepTYOzEJOmc3Li9kEsBubULxWBjf/gOBzAzURNps3cO4JFgZSAGzJWQTT7/emMkod0jb9WdqVA2BVMi7yge54kdVMxHEa5r3b97szI5p58ii0I54JiCUP5lyfTwE/nKZHZnfm644oLIXf6MdW2r+6R8CAQOjgfwwgfkwHQYDVR0OBBYEFEhZAFY9JyxGrhGGBaR0GawJyowRMIHJBgNVHSMEgcEwgb6AFEhZAFY9JyxGrhGGBaR0GawJyowRoYGapIGXMIGUMQswCQYDVQQGEwJVUzETMBEGA1UECBMKQ2FsaWZvcm5pYTEWMBQGA1UEBxMNTW91bnRhaW4gVmlldzEQMA4GA1UEChMHQW5kcm9pZDEQMA4GA1UECxMHQW5kcm9pZDEQMA4GA1UEAxMHQW5kcm9pZDEiMCAGCSqGSIb3DQEJARYTYW5kcm9pZEBhbmRyb2lkLmNvbYIJAJNurL4H8gHfMAwGA1UdEwQFMAMBAf8wDQYJKoZIhvcNAQEFBQADggEBAHqvlozrUMRBBVEY0NqrrwFbinZaJ6cVosK0TyIUFf/azgMJWr+kLfcHCHJsIGnlw27drgQAvilFLAhLwn62oX6snb4YLCBOsVMR9FXYJLZW2+TcIkCRLXWG/oiVHQGo/rWuWkJgU134NDEFJCJGjDbiLCpe+ZTWHdcwauTJ9pUbo8EvHRkU3cYfGmLaLfgn9gP+pWA7LFQNvXwBnDa6sppCccEX31I828XzgXpJ4O+mDL1/dBd+ek8ZPUP0IgdyZm5MTYPhvVqGCHzzTy3sIeJFymwrsBbmg2OAUNLEMO6nwmocSdN2ClirfxqCzJOLSDE4QyS9BAH6EhY6UFcOaE0=</string>
    <string name="sd_encrypt_notify_title">SD card encryption required</string>
    <string name="sd_encrypt_notify_text">Click here to enable</string>
    <string name="ext_media_ro_notification_title">SD card is read-only (not encrypted)</string>
    <string name="ext_media_ro_notification_message">For write access, format to encrypt SD</string>
    <string name="data_encrypt_notify_title">Internal data encryption enabled</string>
    <string name="data_encrypt_notify_text" />
    <string name="data_encrypt_convert_diag">Decrypting...</string>
    <string name="extmedia_format_need_owner_title">Owner user required</string>
    <string name="extmedia_format_need_owner_message">Only the device owner can start encryption.</string>
    <string name="extmedia_format_need_password_title">No lock screen PIN or password</string>
    <string name="extmedia_format_need_password_message">You need to set a lock screen PIN or password before you can start encryption.</string>
    <string name="disable_notify_title">IT disabled:</string>
    <string name="tangible_device_config">B123,BC,O,X,X</string>
    <string name="it_notify_text">Policy enforced by IT</string>
    <string name="permission_notify_title">IT blocked:</string>
    <string name="encrypted_notification_bar">Unable to start:</string>
    <string name="encrypted_notify_title">: encrypted</string>
    <string name="encrypted_notify_text">Enter encryption password to unlock</string>
    <string name="bootlock_notification_bar">Unable to start:</string>
    <string name="bootlock_notify_title">: locked</string>
    <string name="bootlock_notify_text">IT policies must first be loaded</string>
    <string name="bt_notify_title">IT disabled bluetooth</string>
    <string name="camera_notify_title">IT disabled camera</string>
    <string name="install_notify_title">IT blocked install:</string>
    <string name="uninstall_notify_title">IT blocked uninstall:</string>
    <string name="wifi_notify_title">IT disabled WiFi</string>
    <string name="device_admin_action_state_changed">threelm.device_admin.action.STATE_CHANGED</string>
    <string name="device_admin_extra_service">device_admin_SERVICE</string>
    <string name="device_admin_service_bluetooth">device_admin_service_BT</string>
    <string name="default_enabled_input_methods">com.lge.ime/.LgeImeImpl:com.google.android.googlequicksearchbox/com.google.android.voicesearch.ime.VoiceInputMethodService</string>
    <string name="config_nfc_defaultonoff">INITVALUE</string>
    <string name="config_media_volume_level_in_call">1</string>
    <string name="config_geofenceProvider">com.qualcomm.location</string>
    <string name="config_image_quality_enhancement_sharpness_path">/sys/class/panel/img_tune/sharpness</string>
    <string name="config_image_quality_enhancement_skintone_path">NOT_DEF</string>
    <string name="config_uaprofile_random_path">1K5561off5_M2jBO</string>
    <string name="config_clock_font_downloader">com.lge.systemservice.service.AodFontDownloader</string>
    <string name="config_readermode_path">NOT_DEF</string>
    <string name="sp_Device_Options_NORMAL">Device options</string>
    <string name="global_actions">Phone options</string>
    <string name="global_action_power_off">Power off</string>
    <string name="global_action_power_restart">Power off and restart</string>
    <string name="global_action_power_restart_ATT">Restart</string>
    <string name="global_actions_toggle_airplane_mode_ATT">Airplane mode is on</string>
    <string name="global_action_dialog_ok">OK</string>
    <string name="config_app_tier">HIGH</string>
    <string name="sp_turn_on_NORMAL">Turn on</string>
    <string name="restart_action_press_hold_power">Press &amp; hold the POWER key</string>
    <string name="restart_action_press_hold_power_vol_down">Press &amp; hold the Power and Volume Down keys</string>
    <string name="restart_count_down_format_power_vol_down">To restart, press and hold both keys for %d seconds.</string>
    <string name="restart_embedded_format_power_vol_down">To power off, press and hold both keys for %d seconds longer.</string>
    <string name="restart_count_format">To restart your phone, continue to press and hold the POWER key for %d seconds.</string>
    <string name="restart_count_down_format">To restart, press and hold the POWER key for %d seconds.</string>
    <string name="restart_embedded_format">To power off, press and hold it %d seconds longer.</string>
    <string name="sp_turn_on_silent_mode_NORMAL">Turn on Silent mode</string>
    <string name="sp_turn_off_silent_mode_NORMAL">Turn off Silent mode</string>
    <string name="sp_turn_on_flight_mode_NORMAL">Turn on Flight mode</string>
    <string name="sp_turn_off_flight_mode_NORMAL">Turn off Flight mode</string>
    <string name="sp_turn_on_airplane_mode_NORMAL">Turn on Airplane mode</string>
    <string name="sp_turn_off_airplane_mode_NORMAL">Turn off Airplane mode</string>
    <string name="sp_airplane_mode_message_NORMAL">"Airplane mode will be turned on.
Calls and messages unavailable. All wireless connections such as Wi-Fi, Bluetooth and mobile data will be turned off. Wi-Fi and Bluetooth can be turned on again."</string>
    <string name="sp_airplane_mode_message_NORMAL_5_0">To turn on Airplane mode, calls and messages will be unavailable. All wireless connections such as Wi-Fi, Bluetooth, and mobile data will be turned off. Wi-Fi and Bluetooth can be turned back on even when Airplane mode is on.</string>
    <string name="sp_airplane_mode_message_NORMAL_ATT">Calls and messages unavailable. All wireless connections such as Wi-Fi, Bluetooth and mobile data will be turned off.</string>
    <string name="sp_airplane_mode_enable_vzw_com_NORMAL">"When Airplane mode is on, you can't use the Internet, Email or other apps that require a data connection unless you use Wi-Fi.

Turn on Airplane mode?"</string>
    <string name="sp_airplane_mode_enable_vzw_NORMAL">"When Airplane mode is on, you won't be able to use the Internet, Email or other apps that need a data connection unless you use Wi-Fi. Video calls won't work in Airplane mode.

Turn on Airplane mode?"</string>
    <string name="sp_airplane_mode_enable_vzw_com_NORMAL2">"When Airplane mode is on, you won't be able to use the Internet, Email or other apps that require a data connection unless you use Wi-Fi.

Turn on Airplane mode?"</string>
    <string name="sp_airplane_mode_enable_vzw_NORMAL2">"When Airplane mode is on, you won't be able to use the Internet, Email or other apps that need a data connection unless you use Wi-Fi. Your phone's Video Calling function won't work in Airplane mode.

Turn on Airplane mode?"</string>
    <string name="sp_airplane_mode_on_NORMAL">Airplane mode is ON</string>
    <string name="sp_airplane_mode_off_NORMAL">Airplane mode is OFF</string>
    <string name="sp_phone_power_off_confirm_NORMAL">"Phone will power off.
Continue?"</string>
    <string name="sp_power_off_confirm_NORMAL">"Device will power off.
Continue?"</string>
    <string name="sp_restart_confirm_NORMAL">"Device will restart.
Continue?"</string>
    <string name="sp_phone_restart_confirm_NORMAL">"Phone will restart.
Continue?"</string>
    <string name="sp_restart_confirm_question_NORMAL">Would you like to restart?</string>
    <string name="unsupportedMmiCode">Dialled MMI Code is not supported.</string>
    <string name="stkCcUssdToDial">USSD request is modified to DIAL request.</string>
    <string name="stkCcUssdToSs">USSD request is modified to SS request.</string>
    <string name="stkCcUssdToUssd">USSD request is modified to new USSD request.</string>
    <string name="stkCcSsToDial">SS request is modified to DIAL request.</string>
    <string name="stkCcSsToUssd">SS request is modified to USSD request.</string>
    <string name="stkCcSsToSs">SS request is modified to new SS request.</string>
    <string name="managed_roaming_title">Managed Roaming</string>
    <string name="managed_roaming_dialog_content">Network with Limited Service found. Do you want to initiate a Network Search?</string>
    <string name="managed_roaming_dialog_ok_button">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="noApplications_lg">No application to perform this action.</string>
    <string name="lg_share_title">Send files</string>
    <string name="lg_share_to_start">Tap to send images, music, videos, etc. to nearby devices wirelessly</string>
    <string name="lg_share_help">Help</string>
    <string name="lg_share_see_more">See more</string>
    <string name="lg_share_to_notice">Have nearby devices turn on File sharing in notification panel.</string>
    <string name="lg_share_no_search_more">No devices were found. Tap See more to extend your search.</string>
</resources>