<?xml version="1.0" encoding="utf-8"?>
<com.android.internal.widget.ResolverDrawerLayout android:id="@id/contentPanel_chooser" android:layout_width="fill_parent" android:layout_height="fill_parent" android:maxWidth="@dimen/resolver_max_width" android_private:maxCollapsedHeight="334.0dip" android_private:maxCollapsedHeightSmall="144.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:android_private="http://schemas.android.com/apk/prv/res/android">
    <LinearLayout android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="44.0dip" android:paddingStart="16.0dip" android:elevation="8.0dip" android_private:layout_alwaysShow="true">
        <ImageView android:layout_gravity="start|center" android:id="@id/title_icon_chooser" android:visibility="gone" android:layout_width="24.0dip" android:layout_height="24.0dip" android:scaleType="fitCenter" android:layout_marginEnd="16.0dip" />
        <TextView android:textSize="16.0dip" android:textStyle="bold" android:textColor="#ff000000" android:gravity="start|center" android:id="@id/title_chooser" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_weight="1.0" />
        <LinearLayout android:id="@id/profile_button_chooser" android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginTop="4.0dip" android:paddingStart="8.0dip" android:paddingEnd="8.0dip" android:layout_marginEnd="4.0dip" style="?android:attr/borderlessButtonStyle">
            <ImageView android:layout_gravity="start|center" android:id="@id/chooser_icon" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip" android:scaleType="fitCenter" android:layout_marginStart="4.0dip" android:layout_marginEnd="16.0dip" />
            <TextView android:textAppearance="?android:textAppearanceButton" android:textColor="?android:textColorPrimary" android:ellipsize="marquee" android:layout_gravity="start|center" android:id="@id/chooser_text1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:minLines="1" android:layout_marginEnd="16.0dip" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/lgshare_layout_normal" android:background="@color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@null" android:onClick="onLGShareClick" android:elevation="8.0dip" android_private:layout_alwaysShow="false">
        <ImageView android:gravity="center" android:layout_gravity="center" android:id="@id/share_icon_normal" android:background="@drawable/ic_lgshare_sharesheet_wifi_normal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginBottom="24.0dip" android:scaleType="fitCenter" android:layout_marginStart="24.0dip" android:layout_marginEnd="32.0dip" />
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginEnd="24.0dip">
            <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="start|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lg_share_title" />
            <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:ellipsize="marquee" android:layout_gravity="start|center" android:id="@id/lgshare_help1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lg_share_to_start" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/lgshare_layout_focus" android:background="@color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@null" android:elevation="8.0dip" android_private:layout_alwaysShow="false">
        <ImageView android:gravity="center" android:layout_gravity="center" android:id="@id/share_icon_focus" android:background="@drawable/ic_lgshare_sharesheet_wifi_focus" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginBottom="24.0dip" android:scaleType="fitCenter" android:layout_marginStart="24.0dip" android:layout_marginEnd="32.0dip" />
        <LinearLayout android:layout_gravity="start|center|top" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:layout_marginEnd="24.0dip">
            <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="start|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lg_share_title" />
            <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:ellipsize="marquee" android:layout_gravity="start|center" android:id="@id/lgshare_help2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lg_share_to_notice" />
            <TextView android:textSize="12.0sp" android:textColor="#ff1894bd" android:ellipsize="marquee" android:layout_gravity="end|center" android:id="@id/lgshare_help_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lg_share_help" android:maxLines="1" android:minLines="1" android:onClick="onLGShareHelpClick" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/lgshare_layout_no_search" android:background="@color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="@null" android:elevation="8.0dip" android_private:layout_alwaysShow="false">
        <LinearLayout android:layout_gravity="fill_horizontal|center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:layout_weight="1.0" android:layout_marginStart="24.0dip">
            <TextView android:textSize="14.0sp" android:textColor="#ff000000" android:gravity="start" android:layout_gravity="start|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lg_share_no_search_more" />
        </LinearLayout>
        <LinearLayout android:layout_gravity="end|center|top" android:orientation="vertical" android:id="@id/lgshare_no_search_more" android:layout_width="80.0dip" android:layout_height="90.0dip" android:layout_marginTop="6.0dip" android:layout_marginBottom="9.0dip" android:onClick="onLGShareMoreClick" android:layout_marginEnd="14.0dip">
            <ImageView android:gravity="center" android:layout_gravity="center" android:background="@drawable/ic_lgshare_sharesheet_more" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:scaleType="fitCenter" />
            <TextView android:textSize="11.5sp" android:textColor="#ff000000" android:ellipsize="marquee" android:gravity="center|top" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="4.0dip" android:text="@string/lg_share_see_more" android:maxLines="2" android:minLines="2" />
        </LinearLayout>
    </LinearLayout>
    <ListView android:scrollbarStyle="outsideOverlay" android:id="@id/chooser_list" android:background="@color/white" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:listSelector="@color/transparent" android:divider="@null" android:nestedScrollingEnabled="true" android:elevation="8.0dip" android:scrollIndicators="top" />
    <TextView android:gravity="center" android:id="@id/chooser_empty" android:background="@color/white" android:padding="32.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/noApplications_lg" android_private:layout_alwaysShow="true" />
    <LinearLayout android:gravity="end|center" android:orientation="horizontal" android:id="@id/cancel_bar" android:background="@android:color/white" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="44.0dip" android:measureWithLargestChild="true" android:layoutDirection="locale" android:elevation="8.0dip" android_private:layout_alwaysShow="true" style="?android:attr/buttonBarStyle">
        <Button android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center" android:id="@id/chooser_cancel_button" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:minWidth="64.0dip" android:text="@string/cancel" android:maxLines="2" android:onClick="onButtonClick" style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</com.android.internal.widget.ResolverDrawerLayout>